--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -21,26 +21,15 @@ jobs:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
          WITH_V: true
          DEFAULT_BUMP: minor
-      
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-   
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./doc
-          push: true
-          tags: migelalfa/wordpress
 
       - name: Checkout
         uses: actions/checkout@v1
 
       - name: Helm tool installer
         uses: Azure/setup-helm@v3
-
+        env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         
       - name: Test my-project
         continue-on-error: true
         uses: instrumenta/kubeval-action@master
@@ -60,6 +49,21 @@ jobs:
           app_version: ${{ steps.bump-version.outputs.tag }}
           chart_version: ${{ steps.bump-version.outputs.tag }}
 
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+   
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./doc
+          push: true
+          tags: migelalfa/wordpress:${{ steps.bump-version.outputs.tag }}
+
+ 
       - name: Slack Notification
         uses: rtCamp/action-slack-notify@v2
         env:
