--- a/my-project/values.yaml
+++ b/my-project/values.yaml
@@ -1,6 +1,9 @@
 name: wordpress
-mount: /var/www/html
-repository: migelalfa/wordpress:latest
+mount: /var/www/html/wp-content/
+#repository: wordpress:5.9.3-php8.1-apache
+#repository: wordpress:6.0.2-php8.1-apache
+#repository: wordpress:6.0.1-php8.1-apache
+
 
 replicaCount: 2
 
