--- a/my-project/templates/pv.yaml
+++ b/my-project/templates/pv.yaml
@@ -11,6 +11,6 @@ spec:
     storage: {{ .Values.pv.storage }}
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
+  persistentVolumeReclaimPolicy: Recycle
   nfs:
     {{- toYaml .Values.pv.nfs | nindent 4 }}
